feat: minor updates

--- a/about.html
+++ b/about.html
@@ -37,14 +37,14 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1 style="text-align: center;" id="logo">
-							<spa> Call Today: </span><a href="tel:(516)324-4687" style="font-size: x-large;"> (516) 324 - 4687</a>
-						</h1>
+						<div style="text-align: center;" id="logo">
+							<span> Call Today: </span><a href="tel:(516)324-4687" style="font-size: x-large;"> (516) 324 - 4687</a>
+						</div>
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li class="current"><a href="about.html">About</a></li>
+								<li class="current"><a href="about.html">About Me</a></li>
 								<li><a href="services.html">Services</a></li>
 								<li><a href="resources.html">Resources</a></li>
 								<li><a href="contact.html">Contact</a></li>
@@ -75,7 +75,7 @@
 
 										<article>
 											<header>
-												<h2>About Me</h2>
+												<h1>About Me</h1>
 												<p><a href="https://cbeltran.com/services.html" target="_blank">Visit my portfolio for more!</a></p>
 											</header>
 											
